[package]
name = "breach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bastion = { version = "*", features = ["scaling"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
tracing = "*"
