[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", version = "0.1.0", features = ["precompiled-js"] }
bastion = { version = "0.4.5" }
tracing = "0.1.37"
uuid = { version = "1.3.0", features = [] }
