[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-live-view = { git = "https://github.com/davidpdrsn/axum-live-view", version = "0.1.0", features = ["precompiled-js"] }
bastion = { version = "*", features = ["scaling"] }
breach = { path = "../breach" }
futures-util = { version = "0.3.26", default-features = false, features = ["alloc"] }
hyper = { version = "*", features = ["server", "http1"] }
serde = { version = "1.0.152", features = ["serde_derive"] }
tokio = { version = "*", default-features = false }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.3.5", features = ["fs", "request-id"] }
tracing = "*"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
grass = { version = "0.12.2", default-features = false }

[build-dependencies]
grass = { version = "0.12.2", default-features = false }
